# room-booking-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: agent-evals.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py
app/adapters/: system_clock.py
app/adapters/agent/: context.py  graph.py  guard.py  prompt.py  router.py  runtime.py  tools.py
app/adapters/persistence/: mappers.py  orm.py  room_catalog_sql.py  sql_booking_repo.py  sql_user_repo.py
app/adapters/web/: deps.py  errors_handler.py  main.py  metrics.py  schemas.py
app/cli/: __init__.py  hash_password.py
app/core/: config.py  db.py  security.py  startup.py
app/domain/: entities.py  errors.py  overlap.py  ports.py  rules.py  timeutils.py
app/domain/services/: auth_service.py  (+1 more)
doc/: PROJECT_OVERVIEW.md  room-booking-technologies.ipynb
evals/: dataset.py  evaluators.py  run_evals.py  sync_dataset.py
scripts/: smoke-production.sh
tests/: fakes.py  test_fakes.py  test_health.py
tests/agent/: test_graph.py  test_memory.py  test_prompt.py  test_router_stream.py  test_runtime.py  test_tool_identity.py  test_tools.py
tests/core/: test_config.py  test_security.py
tests/domain/: test_auth_service.py  test_booking_service.py  test_errors.py  test_overlap.py  test_rules.py  test_timeutils.py
tests/evals/: test_dataset_sync.py  test_eval_suites.py  test_evaluators.py  test_quality_gates.py
tests/integration/: test_seed.py  test_sql_booking_repo.py
tests/web/: test_api.py  test_metrics.py
(+4 files in other folders)
